<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    <!-- используем цвета, указанные в colors.xml и можем даже их назвать-->

    <EditText
        android:id="@+id/name_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/rectangle_rounded_all"
        android:hint="@string/foldername"
        android:inputType="text"
        android:padding="10sp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/text_body"
        android:layout_width="match_parent"
        android:layout_height="250sp"
        android:layout_below="@id/name_folder"
        android:layout_marginStart="30sp"
        android:layout_marginTop="30sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/rectangle_rounded_all"
        android:ems="25"
        android:gravity="fill"
        android:hint="@string/textbody"
        android:inputType="textMultiLine"
        android:padding="15sp"
        android:textColor="@color/white" />


    <TextView
        android:id="@+id/get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_body"
        android:layout_marginStart="30sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="30sp"
        android:background="@drawable/rectangle_rounded_all"
        android:hint="@string/get"
        android:padding="10sp"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/choicebar_get"
        android:layout_width="43sp"
        android:layout_height="43sp"
        android:layout_below="@id/text_body"
        android:layout_alignRight="@id/get"
        android:layout_marginTop="15sp"
        android:background="@drawable/circle"
        android:text="@string/dots"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:backgroundTint="@null" />

    <Button
        android:id="@+id/update"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_below="@id/get"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        app:backgroundTint="@null"
        android:background="@drawable/rounded_button"
        android:text="@string/change" />

    <ImageButton
        android:id="@+id/returnback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_below="@id/get"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="30sp"
        android:src="@drawable/icons8_arrow_24"/>

</RelativeLayout>